--- a/login.html
+++ b/login.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,7 +22,7 @@
 
     <!-- Bootstrap CSS-->
     <link href="vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all">
-
+    <link rel="stylesheet" href="./css/styleAdmin.css">
     <!-- Vendor CSS-->
     <link href="vendor/animsition/animsition.min.css" rel="stylesheet" media="all">
     <link href="vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all">
@@ -43,41 +45,42 @@
                     <div class="login-content">
                         <div class="login-logo">
                             <a href="#">
+                                A changer
                                 <img src="images/icon/logo.png" alt="CoolAdmin">
                             </a>
                         </div>
                         <div class="login-form">
                             <form action="" method="post">
                                 <div class="form-group">
-                                    <label>Email Address</label>
-                                    <input class="au-input au-input--full" type="email" name="email" placeholder="Email">
+                                    <label>Nom d'utilisateur</label>
+                                    <input class="au-input au-input--full" type="email" name="email" placeholder="saisir le nom d'utilisateur">
                                 </div>
                                 <div class="form-group">
-                                    <label>Password</label>
-                                    <input class="au-input au-input--full" type="password" name="password" placeholder="Password">
+                                    <label>Mot de passe</label>
+                                    <input class="au-input au-input--full" type="password" name="password" placeholder="Saisir le mot de passe">
                                 </div>
                                 <div class="login-checkbox">
-                                    <label>
+                                    <!-- <label>
                                         <input type="checkbox" name="remember">Remember Me
-                                    </label>
-                                    <label>
-                                        <a href="#">Forgotten Password?</a>
+                                    </label> -->
+                                    <label class="motDePasseOub">
+                                        <a href="./forget-pass.html" class="">Mot de passe oublié??</a>
                                     </label>
                                 </div>
-                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">sign in</button>
-                                <div class="social-login-content">
+                                <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Se Connecter</button>
+                                <!-- <div class="social-login-content">
                                     <div class="social-button">
                                         <button class="au-btn au-btn--block au-btn--blue m-b-20">sign in with facebook</button>
                                         <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>
                                     </div>
-                                </div>
+                                </div> -->
                             </form>
-                            <div class="register-link">
+                            <!-- <div class="register-link">
                                 <p>
                                     Don't you have account?
                                     <a href="#">Sign Up Here</a>
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
